syntax = "proto3";

option go_package = "./pb";

package pb;

import "google/protobuf/struct.proto";


message CmdResp{
  int64 code = 1;
  string msg = 2;
  google.protobuf.Struct data = 3;
}

service Cmd {
  rpc playerFetchCsInfo (google.protobuf.Struct) returns (CmdResp);
  rpc playerFetchHistoryMsg (google.protobuf.Struct) returns (CmdResp);
  rpc playerFetchMsg (google.protobuf.Struct) returns (CmdResp);
  rpc playerSendMsg (google.protobuf.Struct) returns (CmdResp);
  rpc playerDisconnect (google.protobuf.Struct) returns (CmdResp);

  rpc csFetchPlayerInfo (google.protobuf.Struct) returns (CmdResp);
  rpc csFetchPlayerQueue (google.protobuf.Struct) returns (CmdResp);
  rpc csConnectPlayer (google.protobuf.Struct) returns (CmdResp);
  rpc csFetchHistoryChat (google.protobuf.Struct) returns (CmdResp);
  rpc csFetchHistoryMsg (google.protobuf.Struct) returns (CmdResp);
  rpc csFetchMsg (google.protobuf.Struct) returns (CmdResp);
  rpc csSendMsg (google.protobuf.Struct) returns (CmdResp);
}